--- a/Flowers-Shop/src/main/resources/templates/users.html
+++ b/Flowers-Shop/src/main/resources/templates/users.html
@@ -6,8 +6,8 @@
 
 <section class="">
 
-    <h1 class="myFont1 display-3 text-white p-2 pt-5 m-5 text-center">All users:
-        <span class="px-2 text-white" th:text="${#lists.size(users)}"></span>
+    <h1 class="myFont1 display-6 text-white p-2 pt-5 m-5 text-center">All users:
+        <span class="px-2" style="color: #FEDB37;" th:text="${#lists.size(users)}"></span>
     </h1>
 
     <div class="container py-1">
