--- a/Flowers-Shop/src/main/resources/templates/my-orders.html
+++ b/Flowers-Shop/src/main/resources/templates/my-orders.html
@@ -1,58 +1,90 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/commons::head}"></head>
-<body class="cart">
+<body class="home">
 <header th:replace="~{fragments/commons::nav}"></header>
-
-<section class="gradient-custom">
-    <div class="container py-5">
+<section class="gradient-custom mb-5 ">
+    <h1 class="display-6 pt-5 m-5 fst-italic text-center text-white myFont1">My orders:
+        <span class="px-2" style="color: #FEDB37;" th:text="${#lists.size(orders)}"></span>
+    </h1>
+    <div class="container py-1">
         <div class="row d-flex justify-content-center align-items-center">
-            <div class="col-lg-10 col-xl-8">
+            <div class="col-lg-10 col-xl-8 my-container">
                 <div class="border mb-3" style="border-radius: 10px;" th:each="order: ${orders}">
-                    <div class="p-4">
-                        <div class="shadow-0 mb-4">
-                            <div class="text-white">
-                                <div class="row mb-2" th:each="item: ${order.getItems()}">
-                                    <div class="col-md-2">
-                                        <img style="width: 100px; height: 100px;" th:src="${item.getUrl()}"
-                                             class="img-fluid" alt="Picture of bouquet">
-                                    </div>
-                                    <div class="col-md-2 text-center d-flex flex-column justify-content-center align-items-center text-white">
-                                        <p class="mb-0 text-white" th:text="${item.getDescription()}">Description</p>
-                                    </div>
-                                    <div class="col-md-2 text-center d-flex flex-column justify-content-center align-items-center text-white">
-                                        <p class="mb-0 small text-white" >Item No</p>
-                                        <p class="mb-0 small text-white" th:text="${item.getItemNumber()}">Item number</p>
-                                    </div>
-                                    <div class="col-md-2 text-center d-flex flex-column justify-content-center align-items-center text-white">
-                                        <p class="mb-0 small text-white">Quantity</p>
-                                        <p class="mb-0 small text-white" th:text="${item.getQuantity()}">Qty: 1</p>
-                                    </div>
-                                    <div class="col-md-2 text-center d-flex flex-column justify-content-center align-items-center text-white">
-                                        <p class="mb-0 small text-white"> Price per unit</p>
-                                        <p class="mb-0 small text-white" th:text="${item.getUnitPrice()}">$499</p>
-                                    </div>
-                                    <div class="col-md-2 text-center d-flex flex-column justify-content-center align-items-center text-white">
-                                        <p class="mb-0 small text-white">Price</p>
-                                        <p class="mb-0 small text-white" th:text="${item.getUnitPrice() * item.getQuantity()}">$499</p>
+                    <div class="d-flex justify-content-center pt-4 text-white">
+                        <p class="fw-bold mb-0 text-white text-center"
+                           th:text="|Order id: ${order.getId()}|">Order Id: {order.id}</p>
+                    </div>
+                    <div class="" style="border-radius: 10px;">
+                        <div class="p-4">
+                            <div class="shadow-0 mb-4">
+                                <div class="text-white">
+                                    <div class="row mb-2" th:each="item: ${order.getItems()}">
+                                        <div class="col-md-2 text-center">
+                                            <img th:src="${item.getUrl()}"
+                                                 class="img-fluid" alt="Picture of bouquet"
+                                                 style="width: 100px; height: 100px;">
+                                        </div>
+                                        <div class="col-md-2 text-center d-flex flex-column justify-content-center
+                                             align-items-center text-white">
+                                            <p class="mb-0 text-white" th:text="${item.getDescription()}">
+                                                Description</p>
+                                        </div>
+                                        <div class="col-md-2 text-center d-flex flex-column justify-content-center
+                                            align-items-center text-white">
+                                            <p class="mb-0 small text-white">Item No</p>
+                                            <p class="mb-0 small text-white" th:text="${item.getItemNumber()}">Item
+                                                number</p>
+                                        </div>
+                                        <div class="col-md-2 text-center d-flex flex-column justify-content-center
+                                            align-items-center text-white">
+                                            <p class="mb-0 small text-white">Quantity</p>
+                                            <p class="mb-0 small text-white" th:text="${item.getQuantity()}">Qty:
+                                                1</p>
+                                        </div>
+                                        <div class="col-md-2 text-center d-flex flex-column justify-content-center
+                                            align-items-center text-white">
+                                            <p class="mb-0 small text-white"> Price per unit</p>
+                                            <p class="mb-0 small text-white"
+                                               th:text="|${#numbers.formatDecimal(item.getUnitPrice(),0,2)} &euro;|">
+                                                $499</p>
+                                        </div>
+                                        <div class="mb-3 col-md-2 text-center d-flex flex-column
+                                            justify-content-center align-items-center text-white">
+                                            <p class="mb-0 small text-white">Price</p>
+                                            <p class="mb-0 small text-white"
+                                               th:text="|${#numbers.formatDecimal(item.getUnitPrice()
+                                                   * item.getQuantity(),0,2)} &euro;|">
+                                                $499</p>
+                                        </div>
+                                        <hr class="mt-2 w-50 mx-auto">
                                     </div>
                                 </div>
                             </div>
+                            <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1;">
+                            <div class="d-flex justify-content-between pt-2 text-white align-items-center">
+                                <p class="fw-bold mb-0 text-white fs-4">Order Details</p>
+                                <p class="mb-0 text-white fw-bold fst-italic fs-4"
+                                   th:text="|Total: ${#numbers.formatDecimal(order.getTotalAmount(),0,2)} &euro;|">
+                                </p>
+                            </div>
+                            <div class="d-flex justify-content-between text-white">
+                                <p class="mb-0 text-white fst-italic w-50">
+                                    Order Date and time:
+                                    <span th:text="${{order.getOrderDateTime()}}"
+                                          class="fw-bold">{22 Dec,2019}</span>
+                                </p>
+                                <p class="mb-0 text-white fst-italic ">
+                                    Status:
+                                    <span class="fw-bold fst-italic text-white "
+                                          th:text="${order.getStatus()}">{PENDING}</span>
+                                </p>
+                            </div>
+                            <p class="mb-0 text-white fst-italic">
+                                Shipping address:
+                                <span th:text="${order.getShippingAddress()}" class="fw-bold"></span>
+                            </p>
                         </div>
-
-                        <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1;">
-
-                        <div class="d-flex justify-content-between pt-2 text-white">
-                            <p class="fw-bold mb-0 text-white">Order Details</p>
-                            <p class="mb-0 text-white" th:text="|Total: ${order.getTotalAmount()}|"><span class="fw-bold me-4 text-white">Total</span> $898.00</p>
-                        </div>
-                        <div class="d-flex justify-content-between text-white">
-<!--                            TODO: format date time - separate date and time -->
-                            <p class="mb-0 text-white" th:text="|Order Date and time: ${order.getOrderDateTime()}|">Order Date and time: 22 Dec,2019</p>
-                            <p class="mb-0 text-white" th:text="|Status: ${order.getStatus()}|"><span class="fw-bold me-4 text-white">Status</span>PENDING</p>
-                        </div>
-                        <p class="fw-bold mb-0 text-white" th:text="|Shipping address: ${order.getShippingAddress()}|">Address</p>
-
                     </div>
                 </div>
             </div>
