--- a/Flowers-Shop/src/main/resources/templates/cart.html
+++ b/Flowers-Shop/src/main/resources/templates/cart.html
@@ -4,7 +4,7 @@
 <body class="home">
 <header th:replace="~{fragments/commons::nav}"></header>
 <div class="container text-center py-4 mb-5 text-white">
-    <h1 class="display-6 p-2 border-bottom m-5 myFont1">CART</h1>
+    <h1 class="display-6 fst-italic p-2 border-bottom m-5 myFont1" th:text="#{cart}">CART</h1>
     <div class="mb-5">
         <div th:each="item: ${cart.getItems()}" class="row align-items-center m-3 cart-round my-container">
             <div class="media col-12 col-md-3 p-2">
@@ -12,14 +12,17 @@
             </div>
             <div class="col-12 col-md-7 fs-5">
                 <p class="fst-italic" th:text="${item.getBouquet().getDescription()}">{Description}</p>
-                <p class="fst-italic">Item No:
+                <p class="fst-italic">
+                    <span th:text="#{item_number}"></span>
                     <span class="fw-bold" th:text="${item.getBouquet().getItemNumber()}"></span>
                 </p>
-                <p class="fst-italic">Quantity:
+                <p class="fst-italic">
+                    <span th:text="#{quantity}"></span>
                     <span class="fw-bold" th:text="${item.getQuantity()}"></span>
                     pcs
                 </p>
-                <p class="fst-italic">Price per pcs:
+                <p class="fst-italic">
+                    <span th:text="#{price_per_unit}"></span>
                     <span class="fw-bold"
                           th:text="${#numbers.formatDecimal(item.getBouquet().getPrice(),0,2)}"></span>
                      &euro;
@@ -27,7 +30,7 @@
             </div>
             <div class="col-12 col-md-2">
                 <form th:action="@{/cart/remove/{id}(id=*{item.getId()})}" th:method="post">
-                    <button type="submit" class="remove-btn rounded-pill px-3 py-1 mb-4">Remove</button>
+                    <button type="submit" class="remove-btn rounded-pill px-3 py-1 mb-4" th:text="#{home_btn_remove}">Remove</button>
                 </form>
             </div>
         </div>
@@ -35,18 +38,18 @@
     <div class="mb-3 d-flex justify-content-center align-items-center">
         <form th:action="@{/order/{cartId}(cartId=*{cart.getId()})}" th:method="post">
             <p th:if="${cart.getTotalPrice()} != 0" class="fs-3 myFont1 m-3"
-               >Total sum:
+               >
+                <span th:text="#{total}"></span>
                 <span class="fw-bold" th:text="${#numbers.formatDecimal(cart.getTotalPrice(),0,2)}"></span>
                 &euro;
             </p>
-            <p th:if="${cart.getTotalPrice()} == 0" class="fs-3 fw-bold fst-italic mt-3"
-               th:text="'The cart is empty!'">Empty</p>
+            <p th:if="${cart.getTotalPrice()} == 0" class="fs-3 fw-bold fst-italic mt-3" th:text="#{empty_cart}">Empty</p>
             <button th:if="${cart.getTotalPrice()} != 0" class="btn-gold rounded-pill mb-5 px-5 py-1 fs-3 fw-bold
-            fst-italic col-10">BUY
+            fst-italic col-10" th:text="#{buy}">BUY
             </button>
             <p>
                 <a th:href="@{/home}" class="back-btn glowing-gold rounded-pill px-5 py-1 fs-5 fst-italic text-white
-                text-decoration-none border border-light">To gallery</a>
+                text-decoration-none border border-light" th:text="#{to_gallery}">To gallery</a>
             </p>
         </form>
     </div>
