--- a/Flowers-Shop/src/main/resources/templates/bouquet-add.html
+++ b/Flowers-Shop/src/main/resources/templates/bouquet-add.html
@@ -6,34 +6,34 @@
 <main>
     <section class="container d-flex justify-content-center min-vh-100 align-items-center" style="max-width: 30em">
         <div class="container mx-auto p-3 text-center border my-container">
-            <h1 class="text-center text-white myFont1 display-6">Add Bouquet</h1>
+            <h1 class="text-center text-white myFont1 display-6" th:text="#{title_add_bouquet}">Add Bouquet</h1>
             <form class="form-floating mx-auto w-75 bg-blur" th:method="post" th:action="@{/bouquet/add}" th:object="${bouquetDTO}" enctype="multipart/form-data">
                 <div class="form-floating mb-3 text-center">
                     <input th:field="*{description}" th:errorclass="is-invalid" class="form-control" id="description"
                            placeholder="Description">
-                    <label for="description">Description</label>
+                    <label for="description" th:text="#{description}">Description</label>
                     <small th:errors="*{description}" class="text-danger ">Description error message</small>
                 </div>
                 <div class="form-floating mb-3 text-center">
                     <input th:field="*{itemNumber}" th:errorclass="is-invalid" type="number" min="0"
                            class="form-control" id="itemNumber" placeholder="Item Number">
-                    <label for="itemNumber">Item Number</label>
+                    <label for="itemNumber" th:text="#{item_number}">Item Number</label>
                     <small th:errors="*{itemNumber}" class="text-danger">Item Number error message</small>
                 </div>
                 <div class="form-floating mb-3 text-center">
                     <input th:field="*{unitPrice}" th:errorclass="is-invalid" type="number" min="0" step=".01"
                            class="form-control" id="price" placeholder="Price">
-                    <label for="price">Price</label>
+                    <label for="price" th:text="#{price}">Price</label>
                     <small th:errors="*{unitPrice}" class="text-danger">Price error message</small>
                 </div>
                 <div class="form-floating mb-3 text-center text-white">
                     <input th:field="*{picture}" th:errorclass="is-invalid" type="file" class="form-control"
                            required id="picture" name="picture" placeholder="Choose picture"/>
-                    <label for="picture">Choose picture</label>
+                    <label for="picture" th:text="#{add_bouquet_choose_picture}">Choose picture</label>
                     <small th:errors="*{picture}" class="text-danger">Picture error message</small>
                 </div>
                 <div class="form-floating mb-3 text-center">
-                    <button class="btn-gold rounded-pill p-2 w-50 my-2 ">Add</button>
+                    <button class="btn-gold rounded-pill p-2 w-50 my-2" th:text="#{add}">Add</button>
                 </div>
             </form>
         </div>
