--- a/Flowers-Shop/src/main/resources/templates/home.html
+++ b/Flowers-Shop/src/main/resources/templates/home.html
@@ -16,19 +16,19 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title" th:text="${bouquet.description}">{description}</h5>
-                        <p class="card-text" th:text="|No. ${bouquet.itemNumber}|">{No.}</p>
-                        <p class="card-text mb-2" th:text="|Price: ${bouquet.unitPrice}|">{Price: lv.}</p>
+                        <p class="card-text" th:text="|&numero; ${bouquet.itemNumber}|">{No.}</p>
+                        <p class="card-text mb-2" th:text="|#{price} ${bouquet.unitPrice} &euro;|">{Price: lv.}</p>
                         <a sec:authorize="!hasRole('ROLE_ADMIN')"
                            th:href="@{/cart/add/{itemNumber}(itemNumber=${bouquet.itemNumber})}"
                            class="btn-gold rounded-pill py-2 px-4"
-                        >
+                        th:text="#{add_to_cart}">
                             ADD TO CART
                         </a>
                         <form sec:authorize="hasRole('ROLE_ADMIN')"
                               th:method="post"
                               th:action="@{/bouquet/remove/{itemNumber}(itemNumber=${bouquet.itemNumber})}"
                         >
-                            <button class="remove-btn rounded-pill py-2 px-4">Remove</button>
+                            <button class="remove-btn rounded-pill py-2 px-4" th:text="#{home_btn_remove}"></button>
                         </form>
                     </div>
                 </div>
