--- a/Flowers-Shop/src/main/resources/templates/register.html
+++ b/Flowers-Shop/src/main/resources/templates/register.html
@@ -6,41 +6,41 @@
 <main>
     <section class="container d-flex justify-content-center min-vh-100 align-items-center py-5 my-5" style="max-width: 30em">
         <div class="container mx-auto text-center border my-container">
-            <h1 class="text-center mt-2 myFont1 display-6 text-white">Register</h1>
+            <h1 class="text-center mt-2 myFont1 display-6 text-white" th:text="#{nav_bar_register}">Register</h1>
             <form class="form-floating mx-auto w-75 bg-blur" th:method="post" th:action="@{/register}"
                   th:object="${userRegisterDTO}">
                 <div class="form-floating mb-3 text-center">
                     <input th:field="*{username}" th:errorclass="is-invalid" class="form-control" id="username"
                            placeholder="Username">
-                    <label for="username">Username</label>
+                    <label for="username" th:text="#{username}">Username</label>
                     <small th:errors="*{username}" class="text-danger ">Username error message</small>
                 </div>
                 <div class="form-floating mb-3 text-center">
                     <input th:field="*{email}" th:errorclass="is-invalid" type="email" class="form-control" id="email"
                            placeholder="name@example.com">
-                    <label for="email">Email address</label>
+                    <label for="email" th:text="#{email}">Email address</label>
                     <small th:errors="*{email}" class="text-danger">Email error message</small>
                 </div>
                 <div class="form-floating mb-3 text-center">
                     <input th:field="*{shippingAddress}" th:errorclass="is-invalid" class="form-control"
                            id="shippingAddress" placeholder="Shipping Address">
-                    <label for="shippingAddress">Shipping address</label>
+                    <label for="shippingAddress"th:text="#{shippingAddress}">Shipping address</label>
                     <small th:errors="*{shippingAddress}" class="text-danger ">Shipping address error message</small>
                 </div>
                 <div class="form-floating mb-3 text-center">
                     <input th:field="*{password}" th:errorclass="is-invalid" type="password" class="form-control"
                            id="password" placeholder="Password">
-                    <label for="password">Password</label>
-                    <small th:errors="*{password}" class="text-danger">Email error message</small>
+                    <label for="password" th:text="#{password}">Password</label>
+                    <small th:errors="*{password}" class="text-danger">Password error message</small>
                 </div>
                 <div class="form-floating mb-3 text-center">
                     <input th:field="*{confirmPassword}" th:errorclass="is-invalid" type="password" class="form-control"
                            id="confirmPassword" placeholder="Confirm password">
-                    <label for="confirmPassword">Confirm Password</label>
+                    <label for="confirmPassword" th:text="#{confirm_password}">Confirm Password</label>
                     <small th:errors="*{confirmPassword}" class="text-danger">Email error message</small>
                 </div>
                 <div class="form-floating mb-3 text-center">
-                    <button class="btn-gold rounded-pill p-2 w-50 my-2 ">REGISTER</button>
+                    <button class="btn-gold rounded-pill p-2 w-50 my-2 " th:text="#{nav_bar_register}">REGISTER</button>
                 </div>
             </form>
         </div>
